fixed spacing and css

--- a/src/index.css
+++ b/src/index.css
@@ -13,22 +13,25 @@
 .tweet {
   border: 1px solid #ddd;
   padding: 15px;
+  padding-top: 25px;
+  padding-bottom: 0px;
   border-radius: 5px;
   margin-bottom: 10px;
 }
 
 .tweet h1 {
   font-style: bold;
-
+  font-size: 1rem;
 }
 
-/* .tweet p {
-
-} */
-
 .tweet h2 {
-  font-size: 5rem;
+  font-size: 1rem;
+  margin-bottom: 0;
+}
 
+.likeLine {
+  display: flex;
+  align-items: right;
 }
 
 #likes {
